COMPILERS-main/parte3(vinicius) copy/sintatico.output
State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 programa: cabecalho $@1 variaveis $@2 funcoes T_INICIO lista_comandos T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: %empty
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 funcoes: %empty
   14        | funcao funcoes

   15 funcao: T_FUNC tipo T_IDENTIF T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

   16 parametros: %empty
   17           | parametro parametros

   18 parametro: tipo T_IDENTIF

   19 lista_comandos: %empty
   20               | comando lista_comandos

   21 comando: entrada_saida
   22        | repeticao
   23        | selecao
   24        | atribuicao
   25        | retorno

   26 retorno: T_RETORNE expressao

   27 entrada_saida: leitura
   28              | escrita

   29 leitura: T_LEIA T_IDENTIF

   30 escrita: T_ESCREVA expressao

   31 $@3: %empty

   32 $@4: %empty

   33 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

   34 $@5: %empty

   35 $@6: %empty

   36 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   37 $@7: %empty

   38 atribuicao: T_IDENTIF $@7 T_ATRIBUI expressao

   39 expressao: expressao T_VEZES expressao
   40          | expressao T_DIV expressao
   41          | expressao T_MAIS expressao
   42          | expressao T_MENOS expressao
   43          | expressao T_MAIOR expressao
   44          | expressao T_MENOR expressao
   45          | expressao T_IGUAL expressao
   46          | expressao T_E expressao
   47          | expressao T_OU expressao
   48          | termo

   49 identificador: T_IDENTIF

   50 chamada: %empty
   51        | T_ABRE lista_argumentos T_FECHA

   52 lista_argumentos: %empty
   53                 | expressao lista_argumentos

   54 termo: identificador chamada
   55      | T_NUMERO
   56      | T_V
   57      | T_F
   58      | T_NAO termo
   59      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3 15
    T_FIM (260) 3
    T_LEIA (261) 29
    T_ESCREVA (262) 30
    T_SE (263) 36
    T_ENTAO (264) 36
    T_SENAO (265) 36
    T_FIMSE (266) 36
    T_ENQTO (267) 33
    T_FACA (268) 33
    T_FIMENQTO (269) 33
    T_INTEIRO (270) 10
    T_LOGICO (271) 9
    T_MAIS (272) 41
    T_MENOS (273) 42
    T_VEZES (274) 39
    T_DIV (275) 40
    T_ATRIBUI (276) 38
    T_MAIOR (277) 43
    T_MENOR (278) 44
    T_IGUAL (279) 45
    T_E (280) 46
    T_OU (281) 47
    T_NAO (282) 58
    T_ABRE (283) 15 51 59
    T_FECHA (284) 15 51 59
    T_V (285) 56
    T_F (286) 57
    T_IDENTIF (287) 4 11 12 15 18 29 38 49
    T_NUMERO (288) 55
    T_RETORNE (289) 26
    T_FUNC (290) 15
    T_FIMFUNC (291) 15


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 3
        on right: 0
    $@1 (39)
        on left: 1
        on right: 3
    $@2 (40)
        on left: 2
        on right: 3
    cabecalho (41)
        on left: 4
        on right: 3
    variaveis (42)
        on left: 5 6
        on right: 3 15
    declaracao_variaveis (43)
        on left: 7 8
        on right: 6 7
    tipo (44)
        on left: 9 10
        on right: 7 8 15 18
    lista_variaveis (45)
        on left: 11 12
        on right: 7 8 11
    funcoes (46)
        on left: 13 14
        on right: 3 14
    funcao (47)
        on left: 15
        on right: 14
    parametros (48)
        on left: 16 17
        on right: 15 17
    parametro (49)
        on left: 18
        on right: 17
    lista_comandos (50)
        on left: 19 20
        on right: 3 15 20 33 36
    comando (51)
        on left: 21 22 23 24 25
        on right: 20
    retorno (52)
        on left: 26
        on right: 25
    entrada_saida (53)
        on left: 27 28
        on right: 21
    leitura (54)
        on left: 29
        on right: 27
    escrita (55)
        on left: 30
        on right: 28
    repeticao (56)
        on left: 33
        on right: 22
    $@3 (57)
        on left: 31
        on right: 33
    $@4 (58)
        on left: 32
        on right: 33
    selecao (59)
        on left: 36
        on right: 23
    $@5 (60)
        on left: 34
        on right: 36
    $@6 (61)
        on left: 35
        on right: 36
    atribuicao (62)
        on left: 38
        on right: 24
    $@7 (63)
        on left: 37
        on right: 38
    expressao (64)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 26 30 33 36 38 39 40 41 42 43 44 45 46 47 53 59
    identificador (65)
        on left: 49
        on right: 54
    chamada (66)
        on left: 50 51
        on right: 54
    lista_argumentos (67)
        on left: 52 53
        on right: 51 53
    termo (68)
        on left: 54 55 56 57 58 59
        on right: 48 58


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    4 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    3 programa: cabecalho . $@1 variaveis $@2 funcoes T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    4 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 4 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    3 programa: cabecalho $@1 . variaveis $@2 funcoes T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   10 tipo: T_INTEIRO .

    $default  reduce using rule 10 (tipo)


State 8

    9 tipo: T_LOGICO .

    $default  reduce using rule 9 (tipo)


State 9

    3 programa: cabecalho $@1 variaveis . $@2 funcoes T_INICIO lista_comandos T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    6 variaveis: declaracao_variaveis .

    $default  reduce using rule 6 (variaveis)


State 11

    7 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    8                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    3 programa: cabecalho $@1 variaveis $@2 . funcoes T_INICIO lista_comandos T_FIM

    T_FUNC  shift, and go to state 15

    $default  reduce using rule 13 (funcoes)

    funcoes  go to state 16
    funcao   go to state 17


State 13

   12 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 12 (lista_variaveis)


State 14

    7 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    8                     | tipo lista_variaveis .
   11 lista_variaveis: lista_variaveis . T_IDENTIF

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENTIF  shift, and go to state 18

    $default  reduce using rule 8 (declaracao_variaveis)

    declaracao_variaveis  go to state 19
    tipo                  go to state 11


State 15

   15 funcao: T_FUNC . tipo T_IDENTIF T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    tipo  go to state 20


State 16

    3 programa: cabecalho $@1 variaveis $@2 funcoes . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 21


State 17

   14 funcoes: funcao . funcoes

    T_FUNC  shift, and go to state 15

    $default  reduce using rule 13 (funcoes)

    funcoes  go to state 22
    funcao   go to state 17


State 18

   11 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 11 (lista_variaveis)


State 19

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 7 (declaracao_variaveis)


State 20

   15 funcao: T_FUNC tipo . T_IDENTIF T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_IDENTIF  shift, and go to state 23


State 21

    3 programa: cabecalho $@1 variaveis $@2 funcoes T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 24
    T_ESCREVA  shift, and go to state 25
    T_SE       shift, and go to state 26
    T_ENQTO    shift, and go to state 27
    T_IDENTIF  shift, and go to state 28
    T_RETORNE  shift, and go to state 29

    $default  reduce using rule 19 (lista_comandos)

    lista_comandos  go to state 30
    comando         go to state 31
    retorno         go to state 32
    entrada_saida   go to state 33
    leitura         go to state 34
    escrita         go to state 35
    repeticao       go to state 36
    selecao         go to state 37
    atribuicao      go to state 38


State 22

   14 funcoes: funcao funcoes .

    $default  reduce using rule 14 (funcoes)


State 23

   15 funcao: T_FUNC tipo T_IDENTIF . T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_ABRE  shift, and go to state 39


State 24

   29 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 40


State 25

   30 escrita: T_ESCREVA . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 47
    identificador  go to state 48
    termo          go to state 49


State 26

   36 selecao: T_SE . expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 50
    identificador  go to state 48
    termo          go to state 49


State 27

   33 repeticao: T_ENQTO . $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

    $default  reduce using rule 31 ($@3)

    $@3  go to state 51


State 28

   38 atribuicao: T_IDENTIF . $@7 T_ATRIBUI expressao

    $default  reduce using rule 37 ($@7)

    $@7  go to state 52


State 29

   26 retorno: T_RETORNE . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 53
    identificador  go to state 48
    termo          go to state 49


State 30

    3 programa: cabecalho $@1 variaveis $@2 funcoes T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 54


State 31

   20 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 24
    T_ESCREVA  shift, and go to state 25
    T_SE       shift, and go to state 26
    T_ENQTO    shift, and go to state 27
    T_IDENTIF  shift, and go to state 28
    T_RETORNE  shift, and go to state 29

    $default  reduce using rule 19 (lista_comandos)

    lista_comandos  go to state 55
    comando         go to state 31
    retorno         go to state 32
    entrada_saida   go to state 33
    leitura         go to state 34
    escrita         go to state 35
    repeticao       go to state 36
    selecao         go to state 37
    atribuicao      go to state 38


State 32

   25 comando: retorno .

    $default  reduce using rule 25 (comando)


State 33

   21 comando: entrada_saida .

    $default  reduce using rule 21 (comando)


State 34

   27 entrada_saida: leitura .

    $default  reduce using rule 27 (entrada_saida)


State 35

   28 entrada_saida: escrita .

    $default  reduce using rule 28 (entrada_saida)


State 36

   22 comando: repeticao .

    $default  reduce using rule 22 (comando)


State 37

   23 comando: selecao .

    $default  reduce using rule 23 (comando)


State 38

   24 comando: atribuicao .

    $default  reduce using rule 24 (comando)


State 39

   15 funcao: T_FUNC tipo T_IDENTIF T_ABRE . parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 16 (parametros)

    tipo        go to state 56
    parametros  go to state 57
    parametro   go to state 58


State 40

   29 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 29 (leitura)


State 41

   58 termo: T_NAO . termo

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    identificador  go to state 48
    termo          go to state 59


State 42

   59 termo: T_ABRE . expressao T_FECHA

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 60
    identificador  go to state 48
    termo          go to state 49


State 43

   56 termo: T_V .

    $default  reduce using rule 56 (termo)


State 44

   57 termo: T_F .

    $default  reduce using rule 57 (termo)


State 45

   49 identificador: T_IDENTIF .

    $default  reduce using rule 49 (identificador)


State 46

   55 termo: T_NUMERO .

    $default  reduce using rule 55 (termo)


State 47

   30 escrita: T_ESCREVA expressao .
   39 expressao: expressao . T_VEZES expressao
   40          | expressao . T_DIV expressao
   41          | expressao . T_MAIS expressao
   42          | expressao . T_MENOS expressao
   43          | expressao . T_MAIOR expressao
   44          | expressao . T_MENOR expressao
   45          | expressao . T_IGUAL expressao
   46          | expressao . T_E expressao
   47          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    $default  reduce using rule 30 (escrita)


State 48

   54 termo: identificador . chamada

    T_ABRE  shift, and go to state 70

    T_ABRE    [reduce using rule 50 (chamada)]
    $default  reduce using rule 50 (chamada)

    chamada  go to state 71


State 49

   48 expressao: termo .

    $default  reduce using rule 48 (expressao)


State 50

   36 selecao: T_SE expressao . T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   39 expressao: expressao . T_VEZES expressao
   40          | expressao . T_DIV expressao
   41          | expressao . T_MAIS expressao
   42          | expressao . T_MENOS expressao
   43          | expressao . T_MAIOR expressao
   44          | expressao . T_MENOR expressao
   45          | expressao . T_IGUAL expressao
   46          | expressao . T_E expressao
   47          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 72
    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69


State 51

   33 repeticao: T_ENQTO $@3 . expressao T_FACA $@4 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 73
    identificador  go to state 48
    termo          go to state 49


State 52

   38 atribuicao: T_IDENTIF $@7 . T_ATRIBUI expressao

    T_ATRIBUI  shift, and go to state 74


State 53

   26 retorno: T_RETORNE expressao .
   39 expressao: expressao . T_VEZES expressao
   40          | expressao . T_DIV expressao
   41          | expressao . T_MAIS expressao
   42          | expressao . T_MENOS expressao
   43          | expressao . T_MAIOR expressao
   44          | expressao . T_MENOR expressao
   45          | expressao . T_IGUAL expressao
   46          | expressao . T_E expressao
   47          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69

    $default  reduce using rule 26 (retorno)


State 54

    3 programa: cabecalho $@1 variaveis $@2 funcoes T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 3 (programa)


State 55

   20 lista_comandos: comando lista_comandos .

    $default  reduce using rule 20 (lista_comandos)


State 56

   18 parametro: tipo . T_IDENTIF

    T_IDENTIF  shift, and go to state 75


State 57

   15 funcao: T_FUNC tipo T_IDENTIF T_ABRE parametros . T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_FECHA  shift, and go to state 76


State 58

   17 parametros: parametro . parametros

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 16 (parametros)

    tipo        go to state 56
    parametros  go to state 77
    parametro   go to state 58


State 59

   58 termo: T_NAO termo .

    $default  reduce using rule 58 (termo)


State 60

   39 expressao: expressao . T_VEZES expressao
   40          | expressao . T_DIV expressao
   41          | expressao . T_MAIS expressao
   42          | expressao . T_MENOS expressao
   43          | expressao . T_MAIOR expressao
   44          | expressao . T_MENOR expressao
   45          | expressao . T_IGUAL expressao
   46          | expressao . T_E expressao
   47          | expressao . T_OU expressao
   59 termo: T_ABRE expressao . T_FECHA

    T_MAIS   shift, and go to state 61
    T_MENOS  shift, and go to state 62
    T_VEZES  shift, and go to state 63
    T_DIV    shift, and go to state 64
    T_MAIOR  shift, and go to state 65
    T_MENOR  shift, and go to state 66
    T_IGUAL  shift, and go to state 67
    T_E      shift, and go to state 68
    T_OU     shift, and go to state 69
    T_FECHA  shift, and go to state 78


State 61

   41 expressao: expressao T_MAIS . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 79
    identificador  go to state 48
    termo          go to state 49


State 62

   42 expressao: expressao T_MENOS . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 80
    identificador  go to state 48
    termo          go to state 49


State 63

   39 expressao: expressao T_VEZES . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 81
    identificador  go to state 48
    termo          go to state 49


State 64

   40 expressao: expressao T_DIV . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 82
    identificador  go to state 48
    termo          go to state 49


State 65

   43 expressao: expressao T_MAIOR . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 83
    identificador  go to state 48
    termo          go to state 49


State 66

   44 expressao: expressao T_MENOR . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 84
    identificador  go to state 48
    termo          go to state 49


State 67

   45 expressao: expressao T_IGUAL . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 85
    identificador  go to state 48
    termo          go to state 49


State 68

   46 expressao: expressao T_E . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 86
    identificador  go to state 48
    termo          go to state 49


State 69

   47 expressao: expressao T_OU . expressao

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    expressao      go to state 87
    identificador  go to state 48
    termo          go to state 49


State 70

   51 chamada: T_ABRE . lista_argumentos T_FECHA

    T_NAO      shift, and go to state 41
    T_ABRE     shift, and go to state 42
    T_V        shift, and go to state 43
    T_F        shift, and go to state 44
    T_IDENTIF  shift, and go to state 45
    T_NUMERO   shift, and go to state 46

    $default  reduce using rule 52 (lista_argumentos)

    expressao         go to state 88
    identificador     go to state 48
    lista_argumentos  go to state 89
    termo             go to state 49


State 71

   54 termo: identificador chamada .

    $default  reduce using rule 54 (termo)


State 72

   36 selecao: T_SE expressao T_ENTAO . $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $default  reduce using rule 34 ($@5)

    $@5  go to state 90


State 73
